# octave

./: .gitignore  AGENTS.md  FIREBASE_NOTIFICATIONS.md  README.md
app/: .gitignore  AGENTS.md  index.html  ngrok.yaml  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  ipc.ts  main.tsx  store.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/migrations/: 0001_init.sql  0002_sync.sql  0003_downloads.sql  0004_podcasts.sql  0005_storage.sql  0006_episode_progress.sql  0007_play_history.sql  0008_lyrics.sql  0009_loudness.sql  0010_equalizer.sql  0011_equalizer_rule_tone.sql
app/src-tauri/src/: download_session.rs  error.rs  lib.rs  main.rs  media_session.rs  notify_sync.rs  push.rs  upload_session.rs
app/src-tauri/src/assets/: mod.rs
app/src-tauri/src/auth/: manager.rs  mod.rs  store.rs
app/src-tauri/src/cache/: mod.rs  model.rs  repo.rs
app/src-tauri/src/commands/: auth_commands.rs  cache_commands.rs  discography_commands.rs  discover_commands.rs  download_commands.rs  equalizer_commands.rs  favorite_commands.rs  library_commands.rs  lyrics_commands.rs  mod.rs  notification_commands.rs  play_history_commands.rs  player_commands.rs  playlist_commands.rs  podcast_commands.rs  sync_commands.rs  upload_commands.rs
app/src-tauri/src/db/: mod.rs
app/src-tauri/src/downloads/: artwork.rs  manager.rs  mod.rs  paths.rs
app/src-tauri/src/equalizer/: mod.rs  model.rs  ops.rs  parser.rs  repo.rs  resolver.rs  service.rs
app/src-tauri/src/equalizer/audio_output/: android.rs  macos.rs  mod.rs  windows.rs
app/src-tauri/src/player/: mod.rs  prefetch.rs  resolver.rs  server.rs  stream.rs
app/src-tauri/src/playlists/: merged.rs  mod.rs  service.rs
app/src-tauri/src/podcasts/: merged.rs  mod.rs  service.rs
app/src-tauri/src/sync/: engine.rs  mod.rs  ops.rs
app/src-tauri/src/transport/: client.rs  config.rs  grpc.rs  mod.rs  proto.rs  rest.rs
app/src-tauri/tests/: auth.rs  cache.rs  downloads.rs  library.rs  playlists.rs  podcasts.rs  sync.rs
app/src/components/: ActionSheet.tsx  AddToPlaylistSheet.tsx  AlbumFolderLocation.tsx  Aliases.tsx  ArtistAvatar.tsx  BlurUpImage.tsx  Cover.tsx  DiscographyCoverage.tsx  DiscographyPanel.tsx  DownloadStatus.tsx  EntityPicker.tsx  EqBars.tsx  FallbackImg.tsx  FavoriteButton.tsx  ImageUploader.tsx  LibraryLocation.tsx  MetadataEditor.tsx  MobileNav.tsx  MobileTopBar.tsx  NowPlaying.tsx  OfflineGate.tsx  PlayerBar.tsx  QuickSearch.tsx  Sidebar.tsx  Skeleton.tsx  SoundsLikeShelf.tsx  SourceBadge.tsx  TrackInfoSheet.tsx  TransportStatus.tsx  icons.tsx
app/src/downloads/: useDownloads.ts
app/src/equalizer/: DeviceRules.tsx  EqualizerHistory.tsx  EqualizerSettings.tsx  ProfileEditor.tsx  ResponseCurve.tsx  dsp.test.ts  dsp.ts  format.test.ts  format.ts  store.ts  types.ts  useEqualizerRuntime.ts
app/src/favorites/: useFavorites.ts
app/src/lib/: error.ts  format.ts  trackMeta.ts  ui.ts  useTrackNames.ts  viewport.ts  visual.ts
app/src/notifications/: useNotifications.ts
app/src/player/: audioGraph.ts  deck.ts  store.ts  ui.ts  useMediaSession.ts  useNativeMediaSession.ts  useNowPlayingMeta.ts
app/src/podcasts/: prefs.ts
app/src/quicksearch/: match.ts  store.ts
app/src/routes/: Account.tsx  Album.tsx  Artist.tsx  Downloads.tsx  Favorites.tsx  (+14 more)
scripts/: export_clap_music_onnx.py
server/: .env.example  .gitignore  AGENTS.md  Cargo.toml  build.rs  docker-compose.yml
server/migrations/: 20260101000000_init.sql  20260201000000_uploads.sql  20260301000000_artist_image.sql  20260401000000_upload_paused.sql  20260501000000_metadata_aliases.sql  20260601000000_notifications.sql  20260701000000_device_tokens.sql  20260801000000_podcasts.sql  20260901000000_storage.sql  20261001000000_episode_progress.sql  20261101000000_play_history.sql  20261201000000_favorites.sql  20270101000000_track_features.sql  20270201000000_album_type.sql  20270301000000_track_aliases.sql  20270401000000_track_explicit.sql  20270501000000_album_type_live.sql  20270601000000_track_features_pgvector.sql  20270701000000_playlist_rec_cache.sql  20270801000000_discography.sql  20270901000000_discography_multiprovider.sql  20271001000000_lyrics.sql  20271101000000_loudness.sql  20271201000000_equalizer.sql  20280101000000_equalizer_rule_tone.sql
server/proto/: auth.proto  discography.proto  discover.proto  equalizer.proto  favorite.proto  library.proto  lyrics.proto  notification.proto  playhistory.proto  playlist.proto  podcast.proto  upload.proto
server/src/: config.rs  equalizer_core.rs  error.rs  lib.rs  main.rs  shutdown.rs  time_fmt.rs
server/src/auth/: identity.rs  mod.rs  password.rs  service.rs  token.rs
server/src/db/: equalizer_pg.rs  mod.rs  models.rs  pg.rs  pool.rs  repo.rs
server/src/grpc/: auth_svc.rs  discography_svc.rs  discover_svc.rs  equalizer_svc.rs  favorite_svc.rs  interceptor.rs  library_svc.rs  lyrics_svc.rs  mod.rs  notification_svc.rs  playhistory_svc.rs  playlist_svc.rs  podcast_svc.rs  proto.rs  upload_svc.rs
server/src/rest/: discography.rs  discover.rs  equalizer.rs  favorites.rs  ingest.rs  library.rs  lyrics.rs  mod.rs  notification.rs  playhistory.rs  playlist.rs  podcast.rs  range.rs  streaming.rs  upload.rs
server/src/services/: archive.rs  artwork.rs  duration.rs  equalizer.rs  favorites.rs  fcm.rs  feed.rs  image_opt.rs  ingest.rs  library.rs  metadata.rs  mod.rs  mp3.rs  musicbrainz.rs  notification.rs  organizer.rs  playhistory.rs  playlist.rs  podcast.rs  podcast_dir.rs  rec_cache.rs  recommendation.rs  scan.rs  storage.rs  streaming.rs  tag.rs  uploads.rs  watch.rs
server/src/services/discography/: acoustid.rs  diff.rs  discogs.rs  match.rs  mod.rs  musicbrainz.rs  provider.rs  service.rs
server/src/services/fingerprint/: chromaprint.rs  decode.rs  extractor.rs  index.rs  loudness.rs  mod.rs  onnx.rs  service.rs
server/src/services/lyrics/: lrc.rs  mod.rs  service.rs  source.rs
server/tests/: fingerprint_integration.rs
server/tests/fixtures/feeds/: sample.xml
(+6 files in other folders)
