[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "sync"] }
# Wrap a broadcast receiver as a Stream for the gRPC server-streaming uploads RPC.
tokio-stream = { version = "0.1", features = ["sync"] }

# gRPC (primary transport). `tls` enables optional server-side TLS (GRPC_TLS).
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tonic-health = "0.12"

# REST (fallback transport) — `ws` powers the live uploads broadcast.
axum = { version = "0.7", features = ["multipart", "ws"] }
# Optional REST TLS (REST_TLS): axum-server terminates rustls, reusing the gRPC
# cert/key. `tls-rustls-no-provider` keeps the tree on the `ring` crypto
# provider already pulled in by tonic/sqlx — pulling the default `tls-rustls`
# would add `aws-lc-rs`, giving rustls two providers and breaking its
# install-from-crate-features default (which also serves gRPC TLS).
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
tower = "0.5"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Errors
thiserror = "1"

# Config / env
dotenvy = "0.15"

# Persistence (Phase 1)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "json",
    "uuid",
    "time",
] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }

# Auth (Phase 2)
argon2 = "0.5"
rand = "0.8"
subtle = "2"

# Library scan (Phase 3): codec/duration/tag probe
lofty = "0.21"
walkdir = "2"

# Image optimization (resize + JPEG re-encode for faster artwork loads).
# Decode jpeg/png/gif/webp uploads; encode optimized JPEG. Pure-Rust (no C dep).
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# Audio duration measurement — cross-validates tag-reported duration
# against actual frame count (critical for VBR files without a seek index).
# The default feature set only enables flac/ogg/vorbis/wav/pcm/mkv, so
# `measure_duration` returned `None` for m4a/mp4/aac/aiff/alac and silently
# fell back to the (often wrong) tag-reported duration. Enable every codec
# + container demuxer that ships in the 0.6.0 release line.
# NOTE: mp3/mp1/mp2 are intentionally omitted — symphonia 0.6.0 pins
# `symphonia-bundle-mp3 = 0.6.0`, which was never published (only alpha), so
# the `all`/`mpa` feature sets fail to resolve. MP3 duration therefore still
# relies on lofty's header read.
symphonia = { version = "0.6", default-features = true, features = [
    "aac",
    "alac",
    "isomp4",
    "aiff",
] }

# Streaming (Phase 4): byte-range responses, async file IO
tokio-util = { version = "0.7", features = ["io"] }
httpdate = "1"

# Uploads & Ingest (Phase 6): folder watcher.
# Default features → FSEvents on macOS, inotify on Linux. Do **not** enable
# `macos_kqueue` — kqueue can't reliably watch newly-moved subdirectories,
# so `mv Lang/Artist/Album/ $INGEST_PATH/` would silently miss events.
notify = "6"

# Metadata & Artwork (Phase 7): fetch album art from Cover Art Archive.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }

# Archive uploads (Phase 6): zip + tarball extraction. ISO/CD are stubbed.
# zip default features pull in deflate/bzip2/lzma/zstd/xz decoders.
zip = "2"
tar = "0.4"
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
sha2 = "0.10"

# Follow notifications (Phase 10): real-time push via Firebase Cloud Messaging
# (HTTP v1 API). `jsonwebtoken` signs the service-account JWT used to mint the
# OAuth2 access token; the HTTP calls reuse `reqwest`. Only used when FCM_ENABLED.
jsonwebtoken = "9"

# Podcasts: RSS/Atom feed parsing (`feed-rs` handles RSS 2.0 + Atom + media/
# itunes namespaces). `sha1` signs the optional PodcastIndex API auth header
# (their scheme is SHA-1, distinct from the `sha2` used for upload chunks).
# `futures-util` streams an episode download to disk without buffering it all.
feed-rs = "2"
sha1 = "0.10"
futures-util = "0.3"

# Acoustic fingerprinting (Phase 12 — "sounds like" radio). `rustfft` powers the
# DSP feature extractor (FFT for the spectrum → MFCC/chroma/spectral features);
# pure Rust, no C dep, no model file. The optional learned-embedding (ONNX) and
# Chromaprint identification extractors live behind the `onnx` / `chromaprint`
# features so the default build stays lean (see services/fingerprint).
rustfft = "6"

# Optional: learned-embedding extractor (Phase 12C, `onnx` feature). `ort` is the
# ONNX Runtime binding; `ndarray` shapes the input tensor. Only pulled when the
# `onnx` feature is enabled.
ort = { version = "2.0.0-rc.10", optional = true }
ndarray = { version = "0.16", optional = true }
# Optional: Chromaprint identification fingerprint (Phase 12E, `chromaprint`
# feature). Pure-Rust Chromaprint port.
rusty-chromaprint = { version = "0.3", optional = true }

[features]
default = []
# Phase 12C — learned audio embeddings via ONNX Runtime (`ort`). Selected at
# runtime by `FINGERPRINT_MODEL`; off by default (heavy native dep + model file).
onnx = ["dep:ort", "dep:ndarray"]
# Phase 12E — Chromaprint identification fingerprints (dedup / AcoustID).
chromaprint = ["dep:rusty-chromaprint"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
