[package]
name = "music-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "music_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
walkdir = "2"

# Transport: gRPC primary, REST fallback (mirrors server).
tonic = { version = "0.12", features = ["transport", "tls", "tls-roots"] }
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "stream", "multipart"] }
futures-util = "0.3"
# Phase 4 — Playback: in-app loopback HTTP server the webview's <audio> element
# streams media from (replaces the old `media://` custom protocol, which can't
# stream and is unusable for media on Android). `tokio-util`'s ReaderStream
# streams local files in 4 KiB chunks instead of buffering them.
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
# WebSocket client for the uploads live-stream REST fallback (gRPC is primary).
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"
async-trait = "0.1"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
sha2 = "0.10"

# Secure credential storage. `keyring` covers macOS/Windows/Linux; Android
# falls back to a file in app-private storage (encrypted by the platform).
[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
