[package]
name = "octave"
version = "0.1.0"
description = "OCTAVE - Open source Spotify alternative"
authors = ["niruhsa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "octave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
walkdir = "2"

# Transport: gRPC primary, REST fallback (mirrors server).
# We use `tls-webpki-roots` (the baked-in Mozilla CA bundle) and NOT `tls-roots`
# (the OS trust store) on purpose. tonic's native-roots path returns a hard
# `NativeCertsNotFound` error whenever `rustls_native_certs::load_native_certs()`
# comes back empty — which it always does on Android, where CAs live as hashed
# files / behind the Java KeyStore and aren't enumerable. With `with_enabled_roots()`
# that error fires *before* the webpki roots are ever added, so the gRPC TLS
# config fails to build and every call silently falls back to REST. The bundled
# webpki roots need no OS store and work identically on desktop and Android. The
# server cert chains to a public CA (REST-over-https already validates it on
# Android using reqwest's bundled webpki roots), so this set is sufficient; an
# internal/private CA would need an explicit `ClientTlsConfig::ca_certificate`.
tonic = { version = "0.12", features = ["transport", "tls", "tls-webpki-roots"] }
# Standard gRPC health-checking client (`grpc.health.v1.Health`) — the
# connectivity probe calls `Check` so "gRPC online" means the service really
# answered, not just that a socket opened. The server already serves it.
tonic-health = "0.12"
prost = "0.13"
# `rustls-tls-native-roots` adds the OS trust store on top of the bundled
# webpki roots so REST-over-`https` trusts the same certs as the gRPC client
# (tonic's `with_enabled_roots()` / `tls-roots`) — e.g. an internal CA the user
# installed system-wide. Without it reqwest trusts only the webpki bundle.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots", "http2", "stream", "multipart"] }
futures-util = "0.3"
# Phase 4 — Playback: in-app loopback HTTP server the webview's <audio> element
# streams media from (replaces the old `media://` custom protocol, which can't
# stream and is unusable for media on Android). `tokio-util`'s ReaderStream
# streams local files in 4 KiB chunks instead of buffering them.
axum = "0.7"
tokio-util = { version = "0.7", features = ["io"] }
# WebSocket client for the uploads live-stream REST fallback (gRPC is primary).
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"
async-trait = "0.1"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"


# Secure credential storage. `keyring` covers macOS/Windows/Linux; Android
# falls back to a file in app-private storage (encrypted by the platform).
[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

[target.'cfg(target_os="windows")'.dependencies]
sha2 = { version = "0.10" }

[target.'cfg(not(target_os="windows"))'.dependencies]
# Upload hashing (per-chunk + whole-file SHA-256). The `asm` feature pulls in
# the crate's hardware-accelerated backends: ARMv8 crypto extensions on aarch64
# (Android phones, Apple Silicon) and the SHA-NI fallback on x86. Without it,
# aarch64 silently uses the pure-software path — ~5-10x slower, which is the
# stall felt when hashing large album files on mobile. The backend does runtime
# CPU detection (cpufeatures) and falls back to software, so it's safe on any
# device. Pure SHA-256, so no upload-protocol change vs. the server.
sha2 = { version = "0.10", features = ["asm"] }


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
